# MLET-integracao-ci-cd

./: Dockerfile  Dockerfile-singlestage  api.py  dataset_processado.csv  dummy_train.py  dummy_train_governance.py  explorer.ipynb  preparar-dados.py  processamento.py  pyproject.toml  relatorio_pr.md  train.py  validate_env.py
.github/workflows/: cd.yaml  ci-workflow-call.yaml  ci.yaml  ml-pipeline.yaml  monitoramento-diario.yaml
k8s/: deployment.yaml  routing.yaml
scripts/: avaliar_desafiante.py  cao_de_guarda.py  disparar_webhook.py
src/models/: preparar-dados.py
tests/: test_api.py  test_dados.py
