[tool.poetry]
name = "mlops-pipeline-demo"
version = "0.1.0"
description = "Projeto prático de CI/CD para Machine Learning"
authors = ["Sua Equipe <equipe@empresa.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
fastapi = "^0.136.3"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.7.1"
ruff = "^0.4.0"
pytest = "^9.0.3"
httpx = "^0.28.1"


[tool.poetry.group.api.dependencies]
httpx2 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"